# rcli

./: .gitignore  .pre-commit-config.yaml  Cargo.toml  README.md  cliff.toml  deny.toml
fixtures/: b64.txt
src/: lib.rs  main.rs  opts.rs  process.rs  tool.rs
src/cli/: base64.rs  csv.rs  genpass.rs  mod.rs  text.rs
src/process/: b64.rs  csv_convert.rs  genpass.rs  mod.rs  text.rs
