[package]
name = "rcli"
version = "0.1.0"
authors = ["kexin <kexin_l@126.com>"]
edition = "2021"
license = "MIT"


[dependencies]
anyhow = "1.0.97"
base64 = "0.22.1"
clap = { version = "4.5.31", features = ["derive"] }
csv = "1.3.1"
rand = "0.9.0"
serde = { version = "1.0.218", features = ["derive"] }
serde_json = "1.0.140"
serde_yaml = "0.9.34"
zxcvbn = "3.1.0"
