[package]
name = "rcli"
version = "0.1.0"
authors = ["kexin <kexin_l@126.com>"]
edition = "2021"
license = "MIT"


[dependencies]
anyhow = "1.0.97"
base64 = "0.22.1"
blake3 = "1.6.1"
clap = { version = "4.5.31", features = ["derive"] }
csv = "1.3.1"
ed25519-dalek = { version = "2.1.1", features = ["rand_core"] }
getrandom = "0.3.2"
rand = "0.8.4"
rand_core = "0.9.3"
serde = { version = "1.0.218", features = ["derive"] }
serde_json = "1.0.140"
serde_yaml = "0.9.34"
zxcvbn = "3.1.0"
